--- a/xenesis-html/event-confirmation.html
+++ b/xenesis-html/event-confirmation.html
@@ -46,23 +46,24 @@
         <h1 class="text-[calc(3vh)]">Logo</h1>
         </div>
 
+        {% if isUser == True %}
         <div class="relative flex items-center justify-center gap-4 lg:hidden">
-             <!-- Profile Image -->
-             <img src="./static/event-images/4.jpg" alt="" class=" w-[35px] h-[35px] rounded-full object-cover" onclick="toggleProfileDropdown()">
-             <!-- Profile Dropdown -->
-             <div class="absolute bg-slate-600 bg-opacity-50 top-12 right-0 w-full min-w-[200px] rounded-md border-slate-400 z-50 h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
-                  <a href="#" class="">
-                       <p class="w-full px-4"><i class="bi bi-gear mr-2.5"></i>Profile Settings</p>
-                  </a>
-                  <hr class="my-3 border-b-slate-400">
-                  <a href="#" class="">
-                       <p class="w-full px-4"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
-                  </a>
-             </div>
-             <!-- Menu Toggle Button -->
-             <button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
+            <!-- Profile Image -->
+            <img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
+            <!-- Profile -->
+            <div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
+                <div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
+                    <p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+                    <hr class="w-full my-2" />
+                    <a href="/logout" class="">
+                        <p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
+                    </a>
+                </div>
+            </div>
+            <!-- Menu Toggle Button -->
+            <button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
         </div>
-
+        {%endif%}
         <!-- Mobile Menu -->
         <div class="absolute top-0 left-0 flex flex-col gap-5 items-center justify-center w-screen h-screen z-50 bg-slate-900 bg-opacity-95 hidden" id="mobile-menu">
              <button class="absolute top-5 right-5 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
@@ -252,7 +253,7 @@
                     </div>
                     <div class='flex flex-col group cursor-pointer'>
                         <p class='text-[#9740fe]'>Phone:</p>
-                        <p class='text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300'>+91 999 999 9999</p>
+                        <p class='text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300'>+91 786 308 5614</p>
                     </div>
                 </div>
             </div>
