--- a/xenesis-html/event.html
+++ b/xenesis-html/event.html
@@ -43,18 +43,20 @@
           </div>
 
           <div class="relative flex items-center justify-center gap-4 lg:hidden">
+               {% if isUser == True %}
                <!-- Profile Image -->
-               <img src="./static/event-images/4.jpg" alt="" class=" w-[35px] h-[35px] rounded-full object-cover" onclick="toggleProfileDropdown()">
-               <!-- Profile Dropdown -->
-               <div class="absolute bg-slate-600 bg-opacity-50 top-12 right-0 w-full min-w-[200px] rounded-md border-slate-400 z-50 h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
-                    <a href="#" class="">
-                         <p class="w-full px-4"><i class="bi bi-gear mr-2.5"></i>Profile Settings</p>
-                    </a>
-                    <hr class="my-3 border-b-slate-400">
-                    <a href="#" class="">
-                         <p class="w-full px-4"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
+               <img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
+               <!-- Profile -->
+               <div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
+               <div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
+                    <p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+                    <hr class="w-full my-2" />
+                    <a href="/logout" class="">
+                         <p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
                     </a>
                </div>
+               </div>
+               {%endif%}
                <!-- Menu Toggle Button -->
                <button class="text-2xl block lg:hidden !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-list"></i></button>
           </div>
@@ -805,7 +807,7 @@
                     </div>
                     <div class='flex flex-col group cursor-pointer'>
                          <p class='text-[#9740fe]'>Phone:</p>
-                         <p class='text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300'>+91 999 999 9999</p>
+                         <p class='text-gray-300 text-sm group-hover:translate-x-2 transition-all duration-300'>+91 786 308 5614</p>
                     </div>
                </div>
           </div>
