--- a/xenesis-html/event-details.html
+++ b/xenesis-html/event-details.html
@@ -152,7 +152,7 @@
         <div class="w-full h-full relative flex items-center justify-center overflow-y-hidden">
             <div class="absolute w-full h-full bg-gradient-to-t from-[#240a34] via-transparent to-transparent z-10"> </div>
             <div class="flex relative overflow-hidden">
-                <img src="./static/event-images/jett.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-right mySlides fade">
+                <img src="./static/event-images/3.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-right mySlides fade">
                 <img src="./static/event-images/1.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-center mySlides fade">
                 <img src="./static/event-images/2.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-center mySlides fade">
                 <img src="./static/event-images/4.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-center mySlides fade">
@@ -284,7 +284,7 @@
                 <p class="font-bold text-3xl mb-2 text-blue-400">Organizers</p>
                 <div class="md:flex grid grid-cols-2 items-center lg:justify-start justify-center lg:gap-10 gap-5 sm:gap-y-8 mt-10 organizers-div">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="./static/event-images/jett.jpg" alt="" class="xl:w-[200px] lg:w-[160px] md:w-[140px] w-[160px] xl:h-[200px] lg:h-[160px] md:h-[140px] h-[160px] object-cover object-right rounded-full org-images">
+                        <img src="./static/event-images/3.jpg" alt="" class="xl:w-[200px] lg:w-[160px] md:w-[140px] w-[160px] xl:h-[200px] lg:h-[160px] md:h-[140px] h-[160px] object-cover object-right rounded-full org-images">
                         <p class="mt-3 text-center lg:text-2xl sm:text-xl text-lg lg:font-bold font-semibold org-name">Parth Padhiar</p>
                     </div>
                     <div class="flex flex-col items-center justify-center">
