--- a/xenesis-html/shubham-homepage.html
+++ b/xenesis-html/shubham-homepage.html
@@ -292,7 +292,7 @@
                               <div class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group min-w-[28vw] max-w-[28vw]"
                                    id="event">
                                    <div class="w-full rounded-t-lg overflow-hidden relative group">
-                                        <img src="./static/jett.jpg" alt="1"
+                                        <img src="./static/3.jpg" alt="1"
                                              class="group-hover:scale-110 h-full w-full object-cover overflow-hidden transition-all duration-300">
                                    </div>
                                    <div class="my-3 px-4">
