--- a/xenesis-html/event.html
+++ b/xenesis-html/event.html
@@ -396,7 +396,7 @@
                     </div>
                     <div class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group" id="event">
                          <div class="w-full rounded-t-lg overflow-hidden relative group">
-                              <img src="./static/event-images/jett.jpg" alt="1"
+                              <img src="./static/event-images/3.jpg" alt="1"
                                    class="group-hover:scale-110 h-full w-full object-cover overflow-hidden transition-all duration-300">
                          </div>
                          <div class="my-3 px-4">
@@ -725,7 +725,7 @@
                     </div>
                     <div class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group" id="event">
                          <div class="w-full rounded-t-lg overflow-hidden relative group">
-                              <img src="./static/event-images/jett.jpg" alt="1"
+                              <img src="./static/event-images/3.jpg" alt="1"
                                    class="group-hover:scale-110 h-full w-full object-cover overflow-hidden transition-all duration-300">
                          </div>
                          <div class="my-3 px-4">
