--- a/xenesis-html/index.html
+++ b/xenesis-html/index.html
@@ -335,7 +335,7 @@
                          <div class="bg-[#AAABE2]/50 backdrop-blur-md rounded-lg group min-w-[28vw] max-w-[28vw]"
                               id="event">
                               <div class="w-full rounded-t-lg overflow-hidden relative group">
-                                   <img src="./static/event-images/jett.jpg" alt="1"
+                                   <img src="./static/event-images/3.jpg" alt="1"
                                         class="group-hover:scale-110 h-full w-full object-cover overflow-hidden transition-all duration-300">
                               </div>
                               <div class="my-3 px-4">
